@@ -745,6 +745,8 @@ call_in_directory (const char *pathname,
     char *short_pathname;
     char *p;
 
+    assert (pathname);
+
     /*
      * Do the whole descent in parallel for the repositories, so we
      * know what to put in CVS/Repository files.  I'm not sure the
@@ -870,6 +872,11 @@ call_in_directory (const char *pathname,
 	char *r;
 
 	newdir = 1;
+
+	/* If toplevel_repos doesn't have at least one character, then the
+	 * reference to r[-1] below could be out of bounds.
+	 */
+	assert (*toplevel_repos);
 
 	repo = xmalloc (strlen (toplevel_repos)
 			+ 10);
