@@ -42,6 +42,8 @@ Parse_Info (const char *infofile, const char *repository, CALLPROC callproc,
     const char *srepos;
     const char *regex_err;
 
+    assert (repository);
+
     if (current_parsed_root == NULL)
     {
 	/* XXX - should be error maybe? */
